# KaZa-Server-Palazzetti

./: CMakeLists.txt  KaZaPalazzetti.qml  README.md  qmldir
src/: palazzetti.cpp  palazzetti.h  plugin.cpp  plugin.h
